fix(UI): center alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,4 +29,10 @@ body {
 
 
 
-h1 { z-index: 2; }
+h1 {
+
+  text-align: center;
+
+  z-index: 2;
+
+}
